fix text alignment

--- a/styles.css
+++ b/styles.css
@@ -129,6 +129,7 @@ html {
   font-size: 3rem;
   margin-bottom: 20px;
   color: #b05a1f;
+  text-align: center;
 }
 .next-section .divider-top {
   max-width: 100%;
